--- a/templates/CSS/main.css
+++ b/templates/CSS/main.css
@@ -2,12 +2,39 @@ h1{
     font-size: 150px;
     -webkit-text-stroke: 1px black;
     color: white;
-    text-shadow:
-            3px 3px 5px #000,
-            -1px -1px 5px #000,
-            1px -1px 5px #000,
-            -1px 1px 5px #000,
-            1px 1px 5px #000;
+    animation: myanimation 10s infinite;
 }
 
 
+@keyframes myanimation {
+    0% { text-shadow:
+            3px 3px 5px midnightblue,
+            -1px -1px 5px midnightblue,
+            1px -1px 5px midnightblue,
+            -1px 1px 5px midnightblue,
+            1px 1px 5px midnightblue;}
+    25%{text-shadow:
+            3px 3px 5px gray,
+            -1px -1px 5px gray,
+            1px -1px 5px gray,
+            -1px 1px 5px gray,
+            1px 1px 5px gray;}
+    50%{text-shadow:
+            3px 3px 5px lightblue,
+            -1px -1px 5px lightblue,
+            1px -1px 5px lightblue,
+            -1px 1px 5px lightblue,
+            1px 1px 5px lightblue;}
+    75%{text-shadow:
+            3px 3px 5px lightsteelblue,
+            -1px -1px 5px lightsteelblue,
+            1px -1px 5px lightsteelblue,
+            -1px 1px 5px lightsteelblue,
+            1px 1px 5px lightsteelblue;}
+    100% {text-shadow:
+            3px 3px 5px lightslategray,
+            -1px -1px 5px lightslategray,
+            1px -1px 5px lightslategray,
+            -1px 1px 5px lightslategray,
+            1px 1px 5px lightslategray;}
+}
