--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand text-uppercase font-weight-bold text-white">Navbar</a>
+<nav class="navbar navbar-dark sticky-top" style="background-color: rgba(0,0,0,0.8)">
+    <a class="navbar-brand text-uppercase font-weight-bold text-white animationx">Project X</a>
     <form class="form-inline">
         <a class="btn btn-outline-light mr-2" href="/whichName/public/terms">Terms</a>
         {% set currentDate = date() %}
