--- a/templates/default/homepage.html.twig
+++ b/templates/default/homepage.html.twig
@@ -13,7 +13,7 @@
                     <hr class="divider my-4 bg-dark">
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 font-weight-light mb-5">Our first Symfony project</p>
+                    <p class='text-white-75 font-weight-light mb-5'>Our first Symfony project</p>
                     {#  <a class="btn btn-primary btn-xl js-scroll-trigger" href="">Find Out More</a> #}
                 </div>
             </div>
@@ -22,6 +22,11 @@
 
     <section>
         <div class="container">
+
+
+
+
+
             {% set username = 'someone' %}
             {% set itemList = [1,2,58,8,7,654,24] %}
 
