--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,9 +1,5 @@
-<footer class="page-footer font-small bg-dark">
-
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2019 Copyright:
-        <a href=""> Class of 69</a>
+<footer class="footer">
+    <div class="container">
+        <span class="text-muted">Place sticky footer content here.</span>
     </div>
-    <!-- Copyright -->
-
 </footer>
