--- a/templates/default/homepage.html.twig
+++ b/templates/default/homepage.html.twig
@@ -12,8 +12,8 @@
                     <h1  class="text-uppercase font-weight-bold">Project <a class="newcolor" style="-webkit-text-stroke: 0px black;">X</a></h1>
                     <hr class="divider my-4 bg-dark">
                 </div>
-                <div class="col-lg-8 align-self-baseline">
-                    <p class='text-white-75 font-weight-light mb-5'>Our first Symfony project</p>
+                <div class="align-self-baseline typewriter">
+                    <p class='font-weight-light'>Our first Symfony project</p>
                     {#  <a class="btn btn-primary btn-xl js-scroll-trigger" href="">Find Out More</a> #}
                 </div>
             </div>
@@ -30,7 +30,16 @@
 
     </section>
 
+    <section>
+        <div class="container-fluid" style="background-color: #00aced; height: 500px;">
 
+        </div>
+
+
+
+
+
+    </section>
 
 {% endblock %}
 
