--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,34 +5,87 @@
 
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputUsername" class="sr-only">Username</label>
-    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+{#       #}
+{#        <label for="inputUsername" >{{ 'LOGIN.USERNAME.LABEL' | trans }}</label>#}
+{#       #}
+{#        <label for="inputPassword" >{{ 'LOGIN.PASSWORD.LABEL' | trans }}</label>#}
+{#       #}
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
+{#        #}
 
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
+
+
+<div class="container">
+	<div class="d-flex justify-content-center h-100">
+		<div class="card">
+			<div class="card-header">
+				<h2 class="h3 mb-3 font-weight-normal">{{ 'LOGIN.INFO' | trans }}</h2>
+
+			</div>
+			<div class="card-body d-flex justify-content-center align-items-center container ">
+				<form method="post">
+				 {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
+					<div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fas fa-user"></i></span>
+						</div>
+                        <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control"
+                               placeholder="Username" required autofocus>
+
+					</div>
+					<div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fas fa-key"></i></span>
+						</div>
+                        <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
+					</div>
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+					<div class="form-group">
+						<button class="btn btn-outline-light" type="submit">{{ 'LOGIN.SUBMIT' | trans }}</button>
+					</div>
+				</form>
+			</div>
+
+		</div>
+	</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        {#
+            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+            See https://symfony.com/doc/current/security/remember_me.html
+
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" name="_remember_me"> Remember me
+                </label>
+            </div>
+        #}
+
+
+
 {% endblock %}
+{% block stylesheets %}{{ parent() }}
+	<link rel="stylesheet" href="../templates/CSS/login.css"> {% endblock %}
