--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -13,8 +13,22 @@
         <a class="btn btn-outline-light mr-1 {% if app.request.attributes.get('_route') == 'app_register' %} active {% endif %}" href="{{ path('app_register') }}">
             {{ 'NAV.REGISTER' | trans }}
         </a>
-
-
+{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+            
+            <ul>
+                <li class="nav-item {% if app.request.attributes.get('_route')  == 'app_logout' %}active{% endif %}">
+                    <a class="nav-link" href="{{ path('app_logout') }}">
+                        {{ 'NAV.LOGOUT'|trans }}
+                    </a>
+                </li>
+            {% else %}
+                <h3>{{ 'NAV.LOGGED_AS'|trans({'%name%' : app.user.username()}) }}</h3>
+            <li class="nav-item {% if app.request.attributes.get('_route')  == 'app_register' %}active{% endif %}">
+                <a class="nav-link" href="{{ path('app_register') }}">
+                    {{ 'NAV.REGISTER'|trans }}
+                </a>
+            </li>
+            </ul>
     </form>
 </nav>
 
