--- a/templates/terms.html.twig
+++ b/templates/terms.html.twig
@@ -18,7 +18,7 @@
     </header>
 
     <section class="container">
-        <div class="align-self-baseline">
+        <div class="align-self-baseline pHover">
             <h2>1. Terms</h2>
             <p class='font-weight-light'> This website, https://numeripic.com, is operated by Ondrej Svestka and Bootstrapious. Throughout the site, the terms “we”, “us” and “our” refer to Ondrej Svestka and Bootstrapious. We offer this website, including all information, tools and services available from this site to you, the user, conditioned upon your acceptance of all terms, conditions, policies and notices stated here.
 
@@ -28,8 +28,9 @@
 
                 The materials contained in this website are protected by applicable copyright and trademark law.
             </p>
+        </div>
 
-
+        <div class="align-self-baseline pHover">
             <h2>2. Use License - Templates</h2>
             <p class='font-weight-light'>When you download a free template, you acquire the right to use that item; you're not actually acquiring
                 the item itself. Items are subject to specific terms of use, and these terms are the ‘license’ that we set on Bootstrapious.
@@ -39,47 +40,67 @@
                 has bought for you. Different license types are available for you to choose when you have selected an item. You’ll need to think
                 about the way you want to use the item so that you can pick the right license to allow that use. It’s your responsibility to choose the correct license.
             This license shall automatically terminate if you violate any of these restrictions and may be terminated by numeripic at any time. </p>
+        </div>
+
+        <div class="align-self-baseline pHover">
             <h2>3. Use License - Blog articles and tutorials</h2>
             <p class='font-weight-light'>Blog articles and tutorials are released under CC-BY-NC license. The code included in these articles and tutorials is licensed under MIT license.
             This license shall automatically terminate if you violate any of these restrictions and may be terminated by numeripic at any time.
                 Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.</p>
+        </div>
 
+        <div class="align-self-baseline pHover">
             <h2>4. Intellectual Property</h2>
             <p class='font-weight-light'>We own all the content that we have put on https://bootstrapious.com (unless otherwise stated and excluding content owned by others).
                 This includes the design, compilation, and look and feel of the https://bootstrapious.com site, and copyright, trademarks, designs
                 and other intellectual property on numeripic. We own all the trademarks, logos, service marks and trade names on numeripic
                 (unless otherwise stated and excluding these things owned by others). You will not copy, distribute, modify or make derivative works
                 of any of our Bootstrapious' website content or use any of our intellectual property in any way not expressly stated in these terms.</p>
+        </div>
 
+        <div class="align-self-baseline pHover">
             <h2>5. Disclaimer</h2>
             <p class='font-weight-light'>The materials on numeripic' website are provided on an 'as is' basis. numeripic makes no warranties, expressed or implied, and
                 hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability,
                 fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.
             Further, numeripic does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use
-                of the materials on its website or otherwise relating to such materials or on any sites linked to this site.
+                of the materials on its website or otherwise relating to such materials or on any sites linked to this site.</p>
+        </div>
+
+        <div class="align-self-baseline pHover">
             <h2>6. Limitations</h2>
             <p class='font-weight-light'>In no event shall numeripic or its suppliers be liable for any damages (including, without limitation, damages for loss of data or
                 profit, or due to business interruption) arising out of the use or inability to use the materials on numeripic' website, even if
                 Bootstrapious or a Bootstrapious authorized representative has been notified orally or in writing of the possibility of such damage.
                 Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.</p>
+        </div>
 
+        <div class="align-self-baseline pHover">
             <h2>7. Accuracy of materials</h2>
             <p class='font-weight-light'>The materials appearing on numeripic website could include technical, typographical, or photographic errors. numeripic does not
                 warrant that any of the materials on its website are accurate, complete or current. numeripic may make changes to the materials
                 contained on its website at any time without notice. However numeripic does not make any commitment to update the materials. </p>
+        </div>
+
+        <div class="align-self-baseline pHover">
 
             <h2>8. Links</h2>
             <p class='font-weight-light'>numeripic has not reviewed all of the sites linked to its website and is not responsible for the contents of any such linked site.
                 The inclusion of any link does not imply endorsement by numeripic of the site. Use of any such linked website is at the user's own risk. </p>
+        </div>
+
+        <div class="align-self-baseline pHover">
 
             <h2>9. Modifications</h2>
             <p class='font-weight-light'>numeripic may revise these terms of service for its website at any time without notice. By using this website you are agreeing to
                 be bound by the then current version of these terms of service.</p>
+        </div>
 
+        <div class="align-self-baseline pHover">
             <h2>10. Governing Law</h2>
             <p class='font-weight-light'>These terms and conditions are governed by and construed in accordance with the laws of Czech Republic and you irrevocably submit to
                 the exclusive jurisdiction of the courts in that State or location. </p>
-
+        </div>
             <p class='font-weight-light'>Version 1.1 - Effective date: November 1, 2017. </p>
 
 
@@ -92,7 +113,9 @@
 {% endblock %}
 
 
-
+{% block stylesheets %}{{ parent() }}
+    <link rel="stylesheet" href="../templates/CSS/terms.css">
+{% endblock %}
 
 
 
