--- a/templates/default/homepage.html.twig
+++ b/templates/default/homepage.html.twig
@@ -15,12 +15,15 @@
                 <div class="align-self-baseline typewriter">
                     <p class='font-weight-light'>Our first Symfony project</p>
                     {#  <a class="btn btn-primary btn-xl js-scroll-trigger" href="">Find Out More</a> #}
+                    <a class="goDown newcolor" href="#gallary"><i class="far fa-arrow-alt-circle-down"></i></a>
                 </div>
+
+
             </div>
         </div>
     </header>
 
-    <section>
+    <section id="gallary">
 
 
             {% block content %}
