--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -43,7 +43,7 @@
         <a href="#" class="google"><i class="fab fa-google"></i></a>
         <a href="#" class="Linkdin"><i class="fab fa-linkedin-in"></i></a>
         <div class="footer-copyright">
-            <p>© 2016 Copyright Text </p>
+            <p>© 2019 NumericPic </p>
         </div>
 
     </div>
