--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -21,7 +21,7 @@
                         {{ 'NAV.LOGOUT'|trans }}
                 </a>
 
-                <h3>{{ 'NAV.LOGGED_AS'|trans({'%name%' : app.user.username()}) }}</h3>
+                <h5 class="text-white mt-1 text-center">{{ 'NAV.LOGGED_AS'|trans({'%name%' : app.user.username()}) }}</h5>
 
             {% else %}
 
