--- a/templates/CSS/main.css
+++ b/templates/CSS/main.css
@@ -1,3 +1,7 @@
+body, html{
+    scroll-behavior: smooth;
+}
+
 h1{
     font-size: 150px;
     -webkit-text-stroke: 1px black;
@@ -202,9 +206,14 @@ h1{
     50% { border-color: orange }
 }
 
+/************************************
+*********   Icone go Down    ***********
+*************************************/
 
-
-
+.goDown i{
+    font-size: 40px;
+    padding-top: 20px !important;
+}
 
 
 /************************************
