extra futures like paginator for loop in the photos, home page, finish the photo submit

--- a/templates/CSS/main.css
+++ b/templates/CSS/main.css
@@ -100,7 +100,9 @@ h1{
     visibility: visible;
     transition-delay: 0s;
 }
-
+.row:nth-child(3) {
+    border:1px solid red;
+}
 /* Pen styling */
 * {
     box-sizing: border-box;
