--- a/templates/default/homepage.html.twig
+++ b/templates/default/homepage.html.twig
@@ -4,7 +4,6 @@
 
 {% block body %}
 
-
     <header class="masthead">
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center">
@@ -14,7 +13,7 @@
                 </div>
                 <div class="align-self-baseline typewriter">
                     <p class='font-weight-light'>Our first Symfony project</p>
-                    {#  <a class="btn btn-primary btn-xl js-scroll-trigger" href="">Find Out More</a> #}
+                    <a class="btn btn-primary btn-xl js-scroll-trigger" href="">Find Out More</a>
                     <a class="goDown newcolor" href="#gallary"><i class="far fa-arrow-alt-circle-down"></i></a>
                 </div>
 
@@ -24,13 +23,25 @@
     </header>
 
     <section id="gallary">
+        <div class="row">
+
+  {% for picture in pictures %}
 
 
-            {% block content %}
-                {% include 'body.html.twig' %}
-            {% endblock %}
+            <div class="col">
+                <div class="photo-container" style="background-image:url({{ path('get_picture_content', {'picture': picture.getId()}) }});"></div>
+                <h2>{{ picture.getTitle() }} </h2>
+                <p>{% for tag in picture.getTags() %}</p>
+                <div class="slide">
+                    <p>{{ picture.getSharer().getUsername() }} </p>
+                    <span>{{ tag.getLabel() }}</span>
+                    {% endfor %}
 
+                </div>
+            </div>
+{% endfor %}
 
+        </div>
     </section>
 
     <section>
@@ -38,7 +49,7 @@
 
         </div>
 
-
+}
 
 
 
