add the api to the project and some extra style

--- a/templates/default/homepage.html.twig
+++ b/templates/default/homepage.html.twig
@@ -12,7 +12,7 @@
                     <hr class="divider my-4 bg-dark">
                 </div>
                 <div class="align-self-baseline typewriter">
-                    <p class='font-weight-light'>Our first Symfony project</p>
+                    <a class='font-weight-light'>Our first Symfony project</a>
                     <a class="goDown newcolor" href="#gallary"><i class="far fa-arrow-alt-circle-down"></i></a>
                 </div>
 
@@ -37,7 +37,7 @@
                         <span>{{ tag.getLabel() }}</span>
                     {% endfor %}
                 <div class="slide">
-                    <p>{{ picture.getSharer().getUsername() }} </p>
+                    <p class="newp">{{ picture.getSharer().getUsername() }} </p>
                 </div>
 
 
