--- a/templates/CSS/main.css
+++ b/templates/CSS/main.css
@@ -331,7 +331,16 @@ h1{
     color:#ef1a1a;
 }
 
+.newp{
+    background-color: rgba(255,165,0,0.5);
+    border-radius: 15px;
+    color:black;
+    font-weight: bold;
+    text-align: center;
+    width: 140px;
+    margin-top:10px;
 
+}
 
 
 .page-link {
